fix: custom button spacing

--- a/src/styles/NodeContentRenderer.scss
+++ b/src/styles/NodeContentRenderer.scss
@@ -33,7 +33,8 @@ $hover-padding: 3px;
 }
 
 .nodeType {
-  color: blue;
+  color: lightblue;
+  font-size: large;
   padding: 0 10px;
 }
 
@@ -100,7 +101,8 @@ $hover-padding: 3px;
   --dash-size: 8px;
   --gap-size: 8px;
 
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 500;
   position: relative;
   height: 100%;
@@ -186,6 +188,15 @@ $hover-padding: 3px;
   @extend %rowItem;
   flex: 0 1 auto;
   display: flex;
+  padding-right: 10px;
+
+  > div {
+    > svg {
+      max-height: 19px;
+      max-width: 19px;
+    }
+    margin: 0 3px;
+  }
 }
 
 .moveHandle {
@@ -298,17 +309,10 @@ $hover-padding: 3px;
   margin-left: 10px;
   cursor: pointer;
   z-index: 1000;
-  // transform: translate(-50%, -50%);
 }
 
 .collapseButton {
   transform: rotate(90deg);
-  
-}
-
-.expandButton {
-  // transform: rotate(90deg);
-  // transform-origin: 70% -70%;
 }
 
 /**
